--- a/zadanie-47610/index.html
+++ b/zadanie-47610/index.html
@@ -20,11 +20,11 @@
             consectetur iusto
             ullam officia consequatur. Pariatur, inventore.</p>
         <ol>
-            <li><span style="color: brown;">item</span></li>
-            <li><span style="color: blueviolet;">item</span></li>
-            <li><span style="color: chocolate;">item</span></li>
-            <li><span style="color: cornflowerblue;">item</span></li>
-            <li><span style="color: rgb(233, 246, 0);">item</span></li>
+            <li class="li1">item</li>
+            <li class="li2">item</li>
+            <li class="li3">item</li>
+            <li class="li4">item</li>
+            <li class="li5">item</li>
         </ol>
 
 
