--- a/zadanie-47609/index.html
+++ b/zadanie-47609/index.html
@@ -11,10 +11,10 @@
 
 <body>
 
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
-    <div class="four"></div>
+    <div class="all one"></div>
+    <div class="all two"></div>
+    <div class="all three"></div>
+    <div class="all four"></div>
 
 </body>
 
